fix: Fix slider overlapping on text

--- a/share/html/toolbox/inventory.css
+++ b/share/html/toolbox/inventory.css
@@ -179,7 +179,7 @@ input.expand-task {
 }
 
 .text-fix {
-  margin-left: 1.6em;
+  margin-left: 40px;
 }
 
 .verbosity-option {
